--- a/index.html
+++ b/index.html
@@ -176,8 +176,90 @@
               tempora explicabo quae quod deserunt eius sapiente
             </span>
           </h2>
-            
+          <h3 class="about__content-title"> Work Experience</h3>
+          <div class="swbc"><h4>SWBC</h4>
+          <P>San Antonio, TX</P>
         </div>
+          <div class="swbc"><p>Student Intern - FI Group Technology</p>
+            <P>Aug 2023 - Jan 2024</P>
+          </div>
+            <div class="swbc1">
+              <p>• Architected the seamless transition of a Selenium Hub testing project to Kubernetes EKS, delivering cost savings of   nearly 30% through optimized resource allocation and efficient container  management. <br>
+                • Optimized resource utilization and enhanced operational efficiency by automating scaling, resulting in a 40% reduction in manual intervention. <br>
+                • Improved scalability, enabling seamless integration with CI/CD pipelines and achieving a 50% decrease in deployment duration. <br>
+                • Streamlined deployment and management by creating Helm templates for Selenium Hub, KEDA, and Ingress; reduced deployment time by 40% and with greater scalability for the system. <br>
+                • Implemented Velero backups and restoration for Kubernetes EKS clusters via Azure DevOps pipelines, reducing manual backup tasks by 40%. <br>
+                • Engineered and executed the backup and restoration process from scratch, resulting in a 50% improvement in reliability and scalability. <br>
+                • Managed the backup and recovery processes for over 10 Kubernetes EKS clusters, ensuring data protection and disaster recovery readiness  across the infrastructure.
+               </p>
+            </div>
+            <div class="swbc"><p>Summer Intern - FI Group Technolog</p>
+              <P>May 2023 - Aug 2023</P>
+            </div>
+            <div class="swbc1">
+              <p>• Spearheaded the transformation of Kubernetes manifest files into Helm charts, enabling easier maintenance of        Kubernetes workloads. <br>
+                • Facilitated streamlined deployment processes through the implementation of Helm charts, enhancing operational efficiency. <br>
+                • Achieved an 80% reduction in manual workload by transitioning to Helm charts, optimizing resource utilization and maintenance efforts. <br>
+                • Developed Azure DevOps pipeline for Docker image maintenance, automating build, tagging, and pushing processes, resulting in a 50% reduction in manual effort. <br>
+                • Orchestrated seamless integration with the target repository, enabling the deployment of Docker images in under 5 minutes. <br>
+                • Integrated security scanning into the pipeline, ensuring that all deployed images undergo thorough security checks. <br>
+                • Managed Helm chart repositories, hosting private repositories and integrating with CI/CD pipelines, resulting in a 30% reduction in deployment. <br>
+                • Maintained dependencies between Helm charts and utilized subcharts for modular application architectures, increasing reusability by 50%.
+                </p>
+            </div>
+            <div class="swbc"><h4>Texas Tech University</h4>
+              <P>Lubbock, TX</P>
+            </div>
+            <div class="swbc"><p>Graduate Assistan</p>
+              <P>Aug 2022 - May 2023</P>
+            </div>
+            <div class="swbc1">
+              <p>• Assisted UG students in the Assembly Language course as a graduate assistant by helping them with projects and MASM code problems
+                </p>
+            </div>
+            <div class="swbc"><h4>Capgemini</h4>
+              <P>Bangalore, India</P>
+            </div>
+            <div class="swbc"><p>Associate Consultant</p>
+              <P>Apr 2021 - Aug 2022</P>
+            </div>
+            <div class="swbc1">
+              <p>• Provided expert support and guidance to junior engineers, overseeing the management and optimization of Kubernetes clusters as a Site Reliability Engineer (SRE) specializing in Kubernetes. <br>
+                • Played a pivotal role in ensuring the reliability, scalability, and performance of Kubernetes-based applications for multiple clients, resulting in a 20% decrease in downtime incidents. <br>
+                • Crafted and enhanced the backup and restore process, leading to a 30% improvement in application stability and resilience. <br>
+                • Integrated Dynatrace, Prometheus, and Grafana to create comprehensive dashboards for monitoring application performance, resulting in a 25% increase in proactive issue detection and resolution. <br>
+                • Led Azure DevOps CI/CD development, automating Azure Data Factory resource deployment and management, resulting in a 40% deployment efficiency. Developed scripts for ADF and Databricks management, streamlining tasks for DE engineers by half. <br>
+                • Engineered CI/CD pipelines for deploying SQL scripts on Azure SQL Servers, streamlining database operations and enhancing deployment efficiency by 40%. <br>
+                • Executed comprehensive Git branching strategies, ensuring version control best practices and facilitating collaborative development workflows,contributing to a 40% increase in development productivity.
+                </p>
+            </div>
+            <div class="swbc"><p>Sr. Software engineer</p>
+              <P>Feb 2020 - Apr 2021</P>
+            </div>
+            <div class="swbc1">
+              <p>• Dockerized all service-based applications and migrated them to Kubernetes, enhancing scalability and resource utilization by 40%. <br>
+                • Established and maintained a self-managed Kubernetes cluster to oversee the operations of over 15 clients, ensuring high availability and performance across the infrastructure. <br>
+                • Spearheaded the design and implementation of a comprehensive monitoring system in Kubernetes, integrating Prometheus, Elasticsearch, Filebeat, Kibana, Grafana, and RabbitMQ, which given 30% improvement in system visibility an performance monitoring. <br>
+                • Integrated monitoring applications with JIRA, automating ticket creation for the monitoring team and reducing issue resolution time by 40%. <br>
+                • Written multiple Helm charts for the deployment and management of monitoring system components, streamlining deployment processes and ensuring scalability across multiple environments. <br>
+                • Developed automation process for daily checks, generating comprehensive status reports for 15+ clients across Kubernetes and non-Kubernetes environments, halving the need for manual effort. <br>
+                • Streamlined operations and enhanced productivity, improving monitoring of client status and operational performance by 30%.
+                 </p>
+            </div>
+            <div class="swbc"><p>Software engineer</p>
+              <P>Jan 2019 - Feb 2020</P>
+            </div>
+            <div class="swbc1">
+              <p>• Created scripts for resource management tasks, such as monitoring system performance, managing disk space, and optimizing CPU and memory usage, leading to a 40% reduction in resource wastage. <br>
+                • Developed shell scripts, logrotate configurations and cron jobs to automate resource management tasks in Linux systems, eliminating the need for manual intervention and reducing administrative workload by 40%. <br>
+                • Reduced the number of incidents recorded in the JIRA board by 50% through the implementation of proactive resource management strategies, enhancing system stability and reliability. <br>
+                • Spearheaded the upgrading of multiple third-party services, including Atlassian tools, Nexus, Rundeck, Jenkins, and other applications, resulting in a 30% reduction in downtime during upgrades. <br>
+                • Developed and deployed automated scripts and Rundeck tasks to streamline the upgrade process, reducing manual effort by 40% and ensuring consistent and error-free upgrades. <br>
+                • Achieved significant time savings and improved operational efficiency by automating upgrade tasks, resulting in a 50% reduction in manual work and freeing up resources for other critical tasks. <br>
+                </p>
+            </div>
+         </div>
+
       </section>
     <section id="projects" class="projects sec-pad">
       <div class="main-container">
