--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">Anvesh Muppeda</span>
+          <span class="header__logo-sub">Anvesh Muppeda,Texas Tech University</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
